# wterm

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  STACK_OVERFLOW_FIX.md  ai.go  ai_test.go  bench_test.go  borders.go  completion_test.go  config.go  console_other.go  console_windows.go  go.mod  history.go  history_test.go  main.go  nlp.go  nlp_test.go  pty.go  scrollback.go  scrollback_test.go  themes.go
.github/workflows/: build.yml  ci.yml  release.yml
docs/: index.html
plans/: fix-border-rendering.md
src/: main.rs
src/ai/: provider.rs
src/config/: keybindings.rs  mod.rs  settings.rs  theme.rs
src/plugin/: manager.rs  mod.rs
src/terminal/: grid.rs  parser.rs  pty.rs
src/ui/: ai_command_palette.rs  input.rs  layout.rs  renderer.rs  status_bar.rs  tabs.rs
