[package]
name = "warp-foss"
version = "0.1.0"
edition = "2021"
authors = ["Lumi <lumi@clawdhub.com>"]
description = "A FOSS clone of Warp terminal with AI integration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/luinbytes/warp-foss-clone"
keywords = ["terminal", "warp", "ai", "rust"]
categories = ["command-line-interface", "development-tools"]

[dependencies]
# Terminal emulation
vte = "0.13"
portable-pty = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }
pollster = "0.4"

# GPU rendering
wgpu = "24"
winit = "0.30"

# Font rendering
fontdue = "0.9"
bytemuck = { version = "1", features = ["derive"] }

# Config
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"

# AI providers
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1"
async-trait = "0.1"
futures = "0.3"

# Keychain
keyring = "3"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "2"
once_cell = "1.19"
anyhow = "1"

# Clipboard
arboard = "3.5"
uuid = { version = "1.21.0", features = ["v4"] }

# Search
regex = "1"

# WASM plugin system
wasmtime = { version = "27", default-features = false, features = ["cranelift"] }
wasmtime-wasi = { version = "27", default-features = false }

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "warp-foss"
path = "src/main.rs"
